--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ input[type="radio"].visually-hidden {
     background-position: 100% 18px;
 }
 
-.current-slide {
+.slide-current {
     display: block;
 }
 
@@ -243,7 +243,7 @@ input[type="radio"].visually-hidden {
 
 }
 
-.slider-controls-button-current::after {
+.button-current::after {
     content: "";
 
     position: absolute;
@@ -565,6 +565,7 @@ input[type="radio"].visually-hidden {
     width: 100%;
     height: 416px;
     object-fit: cover;
+    z-index: -1;
 }
 
 .contacts {
@@ -674,16 +675,31 @@ input[type="radio"].visually-hidden {
     line-height: 22px;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .modal {
     position: fixed;
+
+    display: none;
 
     background-color: #ffffff;
     z-index: 200;
 }
 
-.modal-form {
-    display: none;
+.modal-show {
+    display: block;
 
+    animation: fadeIn 0.6s;
+}
+
+.modal-form {
     width: 760px;
 
     padding: 70px 100px 90px;
@@ -1226,8 +1242,6 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item-description {
-    display: none;
-
     position: absolute;
     bottom: 0;
     left: 0;
@@ -1236,10 +1250,15 @@ input[type="radio"].visually-hidden {
     height: 232px;
 
     background-color: #eeeeee;
+    opacity: 0;
 }
 
 .catalog-item:hover .catalog-item-description {
-    display: block;
+    opacity: 1;
+}
+
+.catalog-item:focus-within .catalog-item-description {
+    opacity: 1;
 }
 
 .catalog-item-description h3 {
@@ -1258,7 +1277,10 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item-description p {
+    overflow: hidden;
+
     max-width: 240px;
+    max-height: 380px;
     margin: 0 auto;
 
     line-height: 18px;
